<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="4"
        android:layout_margin="1dp"
        android:background="@color/lblack">
<!--        //Row One-->
        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/clear"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_equl"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            />
        <Button
            android:id="@+id/btnBracket"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/bracket"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"/>
<!--        <Button-->
<!--            android:id="@+id/btnPercent"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="100dp"-->
<!--            android:text="@string/percent"-->
<!--            android:textSize="40sp"-->
<!--            android:textColor="@color/white"-->
<!--            android:background="@drawable/btn_round"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_row="0"-->
<!--            android:layout_column="2"-->
<!--            android:layout_columnWeight="1"/>-->
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/divide"
            android:textSize="40sp"
            android:textColor="@color/orange"
            android:background="@drawable/btn_round"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <!--        //Row Two-->
        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/seven"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/eight"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/nine"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="5dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"/>
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/multiply"
            android:textSize="40sp"
            android:textColor="@color/orange"
            android:background="@drawable/btn_round"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <!--        //Row Three-->
        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/four"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="5dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/five"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="5dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/six"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="5dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"/>
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/minus"
            android:textSize="50sp"
            android:textColor="@color/orange"
            android:background="@drawable/btn_round"
            android:layout_margin="5dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

<!--        Row Four-->

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/one"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="5dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/two"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="5dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/three"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="5dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/plus"
            android:textSize="40sp"
            android:textColor="@color/orange"
            android:background="@drawable/btn_round"
            android:layout_margin="5dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <!--        Row Five-->

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/zero"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="0dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"/>
        <Button
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/point"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_round"
            android:layout_margin="5dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/equals"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:background="@drawable/btn_equl"
            android:layout_margin="5dp"
            android:layout_columnWeight="1"/>


    </GridLayout>


</RelativeLayout>